Bug 768395 - Crash in CDevice::DriverInternalErrorCB because the d3d device is set to crash on error instead of merely returning error codes. Explicitly set the exception mode on device creation, and assert it every time we get it again. r=jrmuizel